added some bookmarks

--- a/notes/bookmarks/index.html
+++ b/notes/bookmarks/index.html
@@ -42,7 +42,7 @@
   <div class="singlegrid">
     <div class="box meta">
   <h2>Bookmarks</h2>
-  <h5 class="date">Laatst gewijzigd: 06-05-2023</h5>
+  <h5 class="date">Laatst gewijzigd: 07-05-2023</h5>
 </div>
 
     <aside class="box">
@@ -79,6 +79,11 @@
 <li><a href="https://suckless.org">suckless</a> Ontwikkelaars van dwm, st en dmenu</li>
 <li><a href="https://www.distrotube.com/">distrotube</a> Distrotube</li>
 <li><a href="https://github.com/LukeSmithxyz">Luke Smith github</a> Github Luke Smith</li>
+</ul>
+<h3 id="onderhoud">Onderhoud</h3>
+<ul>
+<li><a href="https://mijn.hostnet.nl">mijn hostnet</a> Dns settings aanpassen</li>
+<li><a href="https://www.strato.nl">strato</a> Strato website</li>
 </ul>
 <p>later aanvullen.</p>
 <p><a href="/notes">Meer notities</a></p>
