bullseye wordt bookworm

--- a/notes/markdown/index.html
+++ b/notes/markdown/index.html
@@ -179,10 +179,10 @@
 </tbody>
 </table>
 <h3 id="fenced-code-block">Fenced Code Block</h3>
-<pre><code>{
-  &quot;firstName&quot;: &quot;John&quot;,
-  &quot;lastName&quot;: &quot;Smith&quot;,
-  &quot;age&quot;: 25
+<pre tabindex="0"><code>{
+  &#34;firstName&#34;: &#34;John&#34;,
+  &#34;lastName&#34;: &#34;Smith&#34;,
+  &#34;age&#34;: 25
 }
 </code></pre><h3 id="heading-id">Heading ID</h3>
 <h3 id="custom-id">My Great Heading</h3>
@@ -200,14 +200,14 @@
 <li><input disabled="" type="checkbox"> Contact the media</li>
 </ul>
 <p><a href="/notes">Meer notities</a></p>
-<section class="footnotes" role="doc-endnotes">
+<div class="footnotes" role="doc-endnotes">
 <hr>
 <ol>
-<li id="fn:1" role="doc-endnote">
-<p>This is the footnote. <a href="#fnref:1" class="footnote-backref" role="doc-backlink">&#x21a9;&#xfe0e;</a></p>
+<li id="fn:1">
+<p>This is the footnote.&#160;<a href="#fnref:1" class="footnote-backref" role="doc-backlink">&#x21a9;&#xfe0e;</a></p>
 </li>
 </ol>
-</section>
+</div>
     </div>
   </div>
 
